--- a/dynamicHeight.html
+++ b/dynamicHeight.html
@@ -1,28 +1,29 @@
-/*The previous challenges covered how to display data from an array and how to add CSS classes.
- You can combine these lessons to create a simple bar chart. 
- There are two steps to this:
-1) Create a div for each data point in the array
-2) Give each div a dynamic height, using a callback function in the style() method that sets height equal to the data value
-Recall the format to set a style using a callback function:
-selection.style("cssProperty", (d) => d)*/
+/*The previous challenges covered how to display data from an array and how to
+add CSS classes. You can combine these lessons to create a simple bar chart.
+There are two steps to this: 1) Create a div for each data point in the array 2)
+Give each div a dynamic height, using a callback function in the style() method
+that sets height equal to the data value Recall the format to set a style using
+a callback function: selection.style("cssProperty", (d) => d)*/
 
 <style>
-  .bar {
-    width: 25px;
-    height: 100px;
-    display: inline-block;
-    background-color: blue;
-  }
+	.bar {
+		width: 25px;
+		height: 100px;
+		margin: 2px;
+		display: inline-block;
+		background-color: blue;
+	}
 </style>
 <body>
-  <script>
-    const dataset = [12, 31, 22, 17, 25, 18, 29, 14, 9];
+	<script>
+		const dataset = [12, 31, 22, 17, 25, 18, 29, 14, 9];
 
-    d3.select("body").selectAll("div")
-      .data(dataset)
-      .enter()
-      .append("div")
-      .attr("class", "bar").style('height', (d)=> d + 'px')
-      
-  </script>
+		d3.select("body")
+			.selectAll("div")
+			.data(dataset)
+			.enter()
+			.append("div")
+			.attr("class", "bar")
+			.style("height", (d) => 10 * d + "px");
+	</script>
 </body>
