--- a/dynamicHeight.html
+++ b/dynamicHeight.html
@@ -1,9 +1,9 @@
-/*The previous challenges covered how to display data from an array and how to
+<!--The previous challenges covered how to display data from an array and how to
 add CSS classes. You can combine these lessons to create a simple bar chart.
 There are two steps to this: 1) Create a div for each data point in the array 2)
 Give each div a dynamic height, using a callback function in the style() method
 that sets height equal to the data value Recall the format to set a style using
-a callback function: selection.style("cssProperty", (d) => d)*/
+a callback function: selection.style("cssProperty", (d) => d)-->
 
 <style>
 	.bar {
@@ -15,6 +15,7 @@ a callback function: selection.style("cssProperty", (d) => d)*/
 	}
 </style>
 <body>
+	<div></div>
 	<script>
 		const dataset = [12, 31, 22, 17, 25, 18, 29, 14, 9];
 
